--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Finestra - Se nos casan</title>
+    <link href='http://fonts.googleapis.com/css?family=Love+Ya+Like+A+Sister|Tangerine' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <div id="app"></div>
